--- a/src/index.html
+++ b/src/index.html
@@ -8,9 +8,9 @@
   </head>
   <body>
 
-    <app>
+    <rc-app>
       Loading...
-    </app>
+    </rc-app>
 
     <script async src="/main.bundle.js"></script>
 
